--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <div id="result"></div>
     <p>Women Named: <span id="score">0</span></p>
 
+    <p>Time Remaining: <span id="timer">05:00</span></p> 
+
+    <div id="resultsPopup" style="display: none;"> 
+        <h2>gg</h2>
+        <p>Bro you only named <span id="finalScore"></span> women?</p>
+        <button onclick="copyResults()">Copy Results</button>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
