--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Name a Woman</h1>
 
-    <input type="text" id="nameInput" placeholder="Enter a name...">
+    <input type="text" id="nameInput" placeholder="Any...?">
     <button id="submitButton">Submit</button>
 
     <div id="result"></div>
