--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
     <input type="text" id="nameInput" placeholder="Any...?">
     <button id="submitButton">Submit</button>
 
-    <div id="result"></div>
+    <div id="result">
+      <span id="checkingText"></span>
+    </div>
     <p>Women Named: <span id="score">0</span></p>
-
     <p>Time Remaining: <span id="timer">01:00</span></p> 
 
     <div id="resultsPopup" style="display: none;"> 
         <h2>gg</h2>
         <p>Bro you only named <span id="finalScore"></span> women?</p>
+        <p><b>Women named</b>: <span id="womenNamed"</span></p>
+        <p><b>Invalid guesses</b>: <span id="invalidGuesses"</span></p>
         <button onclick="copyResults()">Copy Results</button>
     </div>
 
