--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Name a Woman</h1>
-
+    <div class="title-image-container"> 
+        <h1>Name a Woman!</h1> 
+    </div>
     <input type="text" id="nameInput" placeholder="Any...?">
     <button id="submitButton">Submit</button>
 
