--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <p>Time Remaining: <span id="timer">01:00</span></p> 
 
     <div id="resultsPopup" style="display: none;"> 
-        <h2>gg</h2>
-        <p>Bro you only named <span id="finalScore"></span> women?</p>
+        <h2>Thanks for Playing!</h2>
+        <p>You named <span id="finalScore"></span> women!</p>
         <p><b>Women named</b>: <span id="womenNamed"</span></p>
         <p><b>Invalid guesses</b>: <span id="invalidGuesses"</span></p>
         <button onclick="copyResults()">Copy Results</button>
