--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <div id="resultsPopup" style="display: none;"> 
         <h2><span class="custom-font">Thanks for playing!</span></h2>
         <p>You named <span id="finalScore"></span> women!</p>
-        <p><b>Women named</b>: <span id="womenNamed"</span></p>
-        <p><b>Invalid guesses</b>: <span id="invalidGuesses"</span></p>
+        <p><b>Women named</b>: <span id="womenNamed"></span></p>
+        <p><b>Invalid guesses</b>: <span id="invalidGuesses"></span></p>
         <button onclick="copyResults()">Copy Results</button>
     </div>
 
