--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
         <p><b>Invalid guesses</b>: <span id="invalidGuesses"></span></p>
         <button onclick="copyResults()">Copy Results</button>
     </div>
-
+    <div id="attribution">
+      Inspired by <a href="https://twitter.com/qtcinderella/status/1772787434704814530">QTCinderella</a> and <a             href="https://www.youtube.com/watch?v=bzDlS6JPUtE">Billy Eichner</a>.
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
