--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="mode-description">
             <button id="timedModeButton"><b>Timed Mode</b></button>
-            <p>How many women can you name in a minute?<br>(each valid name gives you another five seconds)</p>
+            <p>How many women can you name in a minute?<br>(each valid name gives you another three seconds)</p>
         </div>
         <h4><span class="custom-font">Rules:</span></h4>
         <ol>
@@ -45,6 +45,8 @@
     <div id="result">
       <span id="checkingText"></span>
     </div>
+
+    <div id="bestMatch"></div>
 
     <div id="resultsPopup" style="display: none;"> 
         <h2><span class="custom-font">Thanks for playing!</span></h2>
