--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="cream-overlay"></div>
     <div id="overlay" style="display: none;"></div>
-    
+
     <div id="introPopup" style="display: none;">
         <h2><span class="custom-font">Name a Woman!</span></h2>
         <div class="mode-description">
@@ -18,7 +18,7 @@
         </div>
         <div class="mode-description">
             <button id="timedModeButton"><b>Timed Mode</b></button>
-            <p>How many women can you name in a minute?<br>(each valid name gives you another three seconds)</p>
+            <p>How many women can you name in a minute?<br>(each valid name gives you another five seconds)</p>
         </div>
         <h4><span class="custom-font">Rules:</span></h4>
         <ol>
@@ -30,7 +30,7 @@
           <li>No repeats!</li>
         </ol>
     </div>
-    
+
     <div class="title-image-container"> 
         <h1>Name a Woman</h1> 
     <div id="scoreDisplay" style="display: none;">
@@ -45,7 +45,9 @@
     <div id="result">
       <span id="checkingText"></span>
     </div>
-
+    <div id="image-result">
+      <img id="womanImage" src="#" alt="Wikipedia portrait" /> 
+    </div>
     <div id="bestMatch"></div>
 
     <div id="resultsPopup" style="display: none;"> 
