--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <div id="overlay" style="display: none;"></div>
 
     <div id="introPopup" style="display: none;">
-        <h2><span class="custom-font">Name a Woman!</span></h2>
+        <h2><span class="custom-font">Game Modes:</span></h2>
         <div class="mode-description">
-            <button id="challengeModeButton"><b>100 Women Challenge</b></button>
+            <button id="challengeModeButton">100 Women</button>
             <p>Can you name one hundred women? How long will it take you?</p>
         </div>
         <div class="mode-description">
-            <button id="timedModeButton"><b>Timed Mode</b></button>
-            <p>How many women can you name in a minute?<br>(each valid name gives you another five seconds)</p>
+            <button id="timedModeButton">Time Rush</button>
+            <p>How many women can you name in a minute?</p>
         </div>
         <h4><span class="custom-font">Rules:</span></h4>
         <ol>
