--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
         <p><b>Women named</b>: <span id="womenNamed"></span></p>
         <p><b>Invalid guesses</b>: <span id="invalidGuesses"></span></p>
         <button onclick="copyResults()">Copy Results</button>
+        <button id="playAgainButton">Play Again</button>
     </div>
+    <button id="quitButton">Give Up</button>
     <div id="attribution">
       Inspired by <a href="https://twitter.com/qtcinderella/status/1772787434704814530">QTCinderella</a> and <a             href="https://www.youtube.com/watch?v=bzDlS6JPUtE">Billy Eichner</a>.
     </div>
